[package]
name = "protobuf_macros"
version = "0.6.0"
authors = ["Paul Liétar <paul@lietar.net>"]

[lib]
name = "protobuf_macros"
path = "src/lib.rs"
plugin = true
test = false
crate-type = ["dylib", "rlib"]

[dependencies]
aster = { git = "https://github.com/peripteraptos/aster", branch = "master" }
syntex = { version = "0.58.1", optional = true }
syntex_syntax = { version = "0.59.1", optional = true }

[features]
with-syntex = ["syntex", "syntex_syntax", "aster/with-syntex"]
